# jsonpacker

./: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  README.md  appoptions.h  cmake_install.cmake  coder.h  data.in  json_packer.cbp  main.cpp  utils.cpp  utils.h
doc/: Doxyfile
include/: apperror.h  appoptions.h  coder.h  error.h  packerstream.h  utils.h
src/: CMakeLists.txt  Makefile  apperror.cpp  appoptions.cpp  cmake_install.cmake  coder.cpp  error.cpp  json_packer  json_packer.cbp  main.cpp  packerstream.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  json_packer_tests  jsoncoder_tests.cpp  jsoncoder_tests.h  jsoncoder_tests_defines.h  main.cpp  utils_tests.cpp  utils_tests.h
